// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The minimal serializer should for native not remove styles 1`] = `
<Text
  allowFontScaling={false}
  style={
    Object {
      "color": "red",
      "padding": 1,
    }
  }
/>
`;

exports[`The minimal serializer should for native remove empty objects as props 1`] = `
<View>
  <Text
    allowFontScaling={false}
  />
</View>
`;

exports[`The minimal serializer should for native remove functions as props 1`] = `
<View>
  <Text
    allowFontScaling={false}
  />
</View>
`;

exports[`The minimal serializer should for native remove redundant native props 1`] = `
<Text
  allowFontScaling={false}
/>
`;

exports[`The minimal serializer should for native remove undefined props 1`] = `
<View>
  <Text
    False={false}
    Null={null}
    Zero={0}
    allowFontScaling={false}
  />
</View>
`;

exports[`The minimal serializer should for native transform render props 1`] = `
<Foo
  prop={
    <Txt
      dir="dir"
    >
      Bar
    </Txt>
  }
/>
`;
